--- a/Homework.Lesson_2/Exercise 2/package.json
+++ b/Homework.Lesson_2/Exercise 2/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "webpack"
+    "dev": "webpack --config develop.config.js",
+    "build": "webpack --config production.config.js"
   },
   "author": "",
   "license": "ISC",
